--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,7 @@ resources:
 jobs:
 - template: rust.yml@templates
   parameters:
+    endpoint: alecmocatta
     default:
       rust_toolchain: 1.21.0 stable beta nightly
       rust_lint_toolchain: nightly-2019-07-19
